# johnny

./: .clang-format  Makefile  README.md  TODO.md  requirements.txt  setup.cfg
data/cme/: Product Slate Export.xlsx  globex-product-reference-sheet.xls
etc/: env
experiments/: accept-all.py  accept-auto-ids.py  accept-chains.py  add_order_ids.py  add_vol.py  annotate.py  balance.py  comments-csv.py  convert-investments.py  convert-to-parquet.py  diff_chains.py  extract-earnings.py  fetch-underlying-prices.py  finalize-chains.py  finalize-closed-chains.py  finalize-earnings.py  find-transfers.py  identify-types.py  johnny-debug  modify-chains.py  print-chains-with-dividends.py  print-new-transaction-types.py  report-realized-gains-for-period.py  risk-payoff-graph.py  snippets.js  snippets.py  tastyworks-db-print-order.py  tax-report-by-chain.py  tax_description.py  test-print-all.sh  translate-transaction-ids.py  translate-txnids-to-orderids.py  unfinalize-futures.py  unfinalize_for_dividends.py
experiments/underprices/: bsm-interpolate.py  fetch-underlying-prices.py  validate-prices.py
johnny/base/: chains.proto  chains.py  chains_pb2.py  chains_test.py  checks.py  common.proto  common_pb2.py  config.proto  config.py  config_pb2.py  config_test.py  consolidate.py  description.py  discovery.py  etl.py  futures.py  instrument.md  instrument.proto  instrument.py  instrument_pb2.py  inventories.py  inventories_test.py  mark.py  match.py  match2.py  match2_test.py  match_test.py  nontrades.md  nontrades.proto  nontrades.py  nontrades_pb2.py  number.py  number_test.py  opening.py  positions.md  positions.proto  recap.py  (+12 more)
(+95 files in other folders)
