[metadata]
name = Johnny
version = 0.0.1
author = Martin Blais
description = blais@furius.ca
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beancount/johnny
project_urls =
    Bug Tracker = https://github.com/beancount/johnny/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-2.0
    Operating System :: OS Independent

[options]
package_dir =
    johnny = johnny/base
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src