[metadata]
name = Johnny
version = 0.0.1
author = Martin Blais
description = blais@furius.ca
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beancount/johnny
project_urls =
    Bug Tracker = https://github.com/beancount/johnny/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-2.0
    Operating System :: OS Independent

[options]
package_dir =
    johnny = johnny/base
packages = find:
python_requires = >=3.6
install_requires =
    click~=8.0.1
    Flask~=2.0.1
    cycler~=0.10.0
    decorator~=4.4.2
    itsdangerous~=2.0.1
    Jinja2~=3.0.1
    kiwisolver~=1.3.1
    MarkupSafe~=2.0.1
    matplotlib~=3.4.2
    more-itertools~=8.8.0
    networkx~=2.5.1
    numpy~=1.20.3
    petl~=1.7.4
    Pillow~=8.2.0
    protobuf~=3.17.3
    pyparsing~=2.4.7
    python-dateutil~=2.8.1
    six~=1.16.0
    Werkzeug~=2.0.1

[options.packages.find]
where = johnny/base
